[project]
name = "lang-graph-example1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langgraph>=0.5.0",
    "notebook>=7.4.3",
    "python-dotenv>=1.1.1",
    "ruff>=0.12.1",
]
